--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   top_snackbar_flutter: ^3.1.0
   loading_animation_widget: ^1.2.0+4
+  flutter_getit: ^1.2.1
+  flutter_dotenv: ^5.1.0
+  dio: ^5.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,6 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/images/
     - assets/images/flags/
 
