--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_getit: ^1.2.1
   flutter_dotenv: ^5.1.0
   dio: ^5.3.3
+  validatorless: ^1.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
