--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   dio: ^5.3.3
   validatorless: ^1.2.3
+  shared_preferences: ^2.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
